--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -1,1 +1,70 @@
-<h1>This is the chatroom index view</h1>
+<h1 class="ui center aligned icon header">
+  <i class="circular inverted green chess knight icon"></i>
+  Add to the chat
+</h1>
+
+<div class="ui two column grid">
+	<div class="twelve wide column">
+		<div class="ui fluid raised card chatbox">
+			<div class="content">
+				<div class="ui feed">
+					<div class="event">
+						<div class="content">
+							<div class="summary">
+								<em>Elliot Fu</em> I think this is a good chat area.
+							</div>
+						</div>
+					</div>
+					<div class="event">
+						<div class="content">
+							<div class="summary">
+								<a>Stevie Feliciano</a> added <a>Elliot Fu</a> as a friend.
+							</div>
+						</div>
+					</div>
+					<div class="event">
+						<div class="content">
+							<div class="summary">
+								<a>Helen Troy</a> added <a>Christian Rocha</a> as a friend.
+							</div>
+						</div>
+					</div>
+					<div class="event">
+						<div class="content">
+							<div class="summary">
+								<a>Christian Rocha</a> signed up for the  site.
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="extra content">
+				<form class="ui reply form">
+					<div class="field">
+						<div class="ui fluid icon input">
+							<input type="text" placeholder="Add to the chat...">
+							<i class="bordered inverted orange edit icon"></i>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+	<div class="four wide column">
+		<div class="ui fluid raised card chatbox">
+			<div class="content">
+				<div class="ui fluid inverted vertical menu">
+					<a class="item">
+						Home
+					</a>
+					<a class="item">
+						Messages
+					</a>
+					<a class="item">
+						Friends
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
